--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,6 +37,15 @@
           <!-- Submit button -->
           <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
 
+          <div *ngIf="loggedIn && loggedIn === 'valid'">
+            <ul *ngFor="let user of users">
+              <li>{{user.name}}</li>
+              <li>{{user.gender}}</li>
+              <li>{{user.email}}</li>
+              <li>{{user.city}}</li>
+            </ul>
+          </div>
+
           <a *ngIf="loggedIn" [ngClass]="loggedIn === 'valid' ? 'btn btn-success btn-lg btn-block' : 'btn btn-danger btn-lg btn-block'" href="#!" role="button">{{ loggedIn === 'valid' ? 'You are logged in' : 'Email or Password is wrong!' }}</a>
 
         </form>
@@ -56,56 +65,57 @@
 
               <form [formGroup]="registerForm" (ngSubmit)="register()">
 
-                <div class="form-outline mb-4">
-                  <input 
-                    [class.is-invalid]='registerForm.get("name")?.errors && registerForm.get("name")?.touched'
-                    type="text" 
-                    formControlName="name" 
-                    class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example1cg">Your Name</label>
-                  <div class="invalid-feedback">name is required</div>
+                <div class="d-md-flex justify-content-start align-items-center mb-4 py-2">
+                  <h6 class="mb-0 me-4 mr-3">Gender: </h6>
+
+                  <div class="form-check form-check-inline mb-0 me-4">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      formControlName="gender"
+                      id="femaleGender"
+                      value="female"
+                    />
+                    <label class="form-check-label" for="femaleGender">Female</label>
+                  </div>
+
+                  <div class="form-check form-check-inline mb-0 me-4">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      formControlName="gender"
+                      id="maleGender"
+                      value="male"
+                    />
+                    <label class="form-check-label" for="maleGender">Male</label>
+                  </div>
+
+                  <div class="form-check form-check-inline mb-0">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      formControlName="gender"
+                      id="otherGender"
+                      value="other"
+                    />
+                    <label class="form-check-label" for="otherGender">Other</label>
+                  </div>
+
                 </div>
 
-                <div class="form-outline mb-4">
-                  <input 
-                    [class.is-invalid]='registerForm.get("email")?.errors && registerForm.get("email")?.touched'
-                    type="email" 
-                    formControlName="email" 
-                    class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example3cg">Your Email</label>
-                  <div class="invalid-feedback">email is required</div>
-                </div>
-
-                <div class="form-outline mb-4">
-                  <input 
-                    [class.is-invalid]='registerForm.get("password")?.errors && registerForm.get("password")?.touched'
-                    type="password" 
-                    formControlName="password" 
-                    class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example4cg">Password</label>
-                  <div *ngIf="registerForm.get('password')?.hasError('required')" class="invalid-feedback">password is required</div>
-                  <div *ngIf="registerForm.get('password')?.hasError('minlength')" class="invalid-feedback">password must be at least 4 characters</div>
-                  <div *ngIf="registerForm.get('password')?.hasError('maxlength')" class="invalid-feedback">password must be at most 8 characters</div>
-                </div>
-
-                <div class="form-outline mb-4">
-                  <input 
-                    [class.is-invalid]='registerForm.get("confirmPassword")?.errors && registerForm.get("confirmPassword")?.touched'
-                    type="password" 
-                    formControlName="confirmPassword" 
-                    class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example4cdg">Repeat your password</label>
-                  <div *ngIf="registerForm.get('confirmPassword')?.hasError('required')" class="invalid-feedback">Confirm password is required</div>
-                  <div *ngIf="registerForm.get('confirmPassword')?.hasError('isMatching')" class="invalid-feedback">Confirm password must match password</div>
-                </div>
+                <app-text-input [formControl]="registerForm.controls['name']" [label]="'Name'" [type]="'text'"></app-text-input>
+                <app-text-input [formControl]="registerForm.controls['email']" [label]="'Email'" [type]="'email'"></app-text-input>
+                <app-text-input [formControl]="registerForm.controls['city']" [label]="'City'" [type]="'text'"></app-text-input>
+                <app-text-input [formControl]="registerForm.controls['country']" [label]="'Country'" [type]="'text'"></app-text-input>
+                <app-date-input [formControl]="registerForm.controls['dateOfBirth']" [label]="'Date of birth'" [maxDate]="maxDate"></app-date-input>
+                <app-text-input [formControl]="registerForm.controls['password']" [label]="'Password'" [type]="'password'"></app-text-input>
+                <app-text-input [formControl]="registerForm.controls['confirmPassword']" [label]="'Confirm Password'" [type]="'password'"></app-text-input>
 
                 <div class="d-flex justify-content-center">
                   <button type="submit" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
                 </div>
 
               </form>
-              {{ registerForm.value | json }}
-              {{ registerForm.status | json }}
             </div>
           </div>
         </div>
